--- a/chimica/C3/latex/dati_e_risultati.tex
+++ b/chimica/C3/latex/dati_e_risultati.tex
@@ -66,6 +66,7 @@ Misurando il pH possiamo ricavare la costante di equilibrio! Abbiamo quindi pres
 più vicino a $V_0/2$ (abbiamo anche provato a fare un interpolazione lineare tra i due punti più
 vicini, ottenendo un risultato identico entro l'incertezza), ottenendo $pK\ped{A} = pH = 4.79$ da cui
 $K\ped{A} = 10^{-pH} = (1.62 \pm 0.01) \times 10^{-5}$. Sebbene l'ordine di grandezza del risultato sia corretto, il valore ottenuto non è compatibile con il valore $1.74 \times 10^{-5}$ riportato in letteratura.
+Chiaramente la stima dell'incertezza è sottostimata.
 
 \paragraph{Andamento teorico della curva di titolazione.}
 
