--- a/chimica/C3/latex/materiale.tex
+++ b/chimica/C3/latex/materiale.tex
@@ -4,7 +4,7 @@
         \setlength{\parskip}{0pt}
         \item{Vetreria: beker per titolare, becker per il recupero delle soluzioni di lavaggio,
             buretta da 25 ml, imbuto, pipette, beuta da 50 ml per \ce{NaOH};}
-        \item{pHmetro con relativo supporto per le due sonde: termometro e elettrodo a vetro;}
+        \item{pHmetro con relativo supporto per le due sonde: termometro ed elettrodo a vetro;}
         \item{Agitatore magnetico con ancoretta;}
         \item{\SI{100}{\milli\liter} di soluzione di \ce{CH3COOH} a concentrazione incognita;}
         \item{Soluzione 1\% di fenolftaleina in etanolo, soluzione 0.1 M di \ce{NaOH} e acqua distillata;}
@@ -36,7 +36,7 @@ quindi l'acetato (\ce{CH3COO-}), che è la sua base coniugata, ha $K\ped{B} = K_
 Essendo la eq. \eqref{eq:reaz} la reazione
 inversa della reazione dell'acetato con l'acqua, si ha che $K\ped{eq} = 1/K\ped{B} \simeq 10^9$.
 
-Poichè $K\ped{eq}$ è molto grande, la \eqref{eq:reaz} è una reazione spostata verso i prodotti. Questo significa la reazione
+Poichè $K\ped{eq}$ è molto grande, la \eqref{eq:reaz} è una reazione spostata verso i prodotti. Questo significa che la reazione
 è quasi stechiometrica; praticamente per ogni \ce{NaOH} aggiunto una molecola di acido acetico si dissocia producendo acetato
 (ecco perchè abbiamo messo solo la freccia verso destra).
 
