--- a/chimica/C3/latex/obiettivo.tex
+++ b/chimica/C3/latex/obiettivo.tex
@@ -1,6 +1,6 @@
 \section*{Scopo}
 
 Come nell'esperienza precedente, anche in questo caso lo scopo è titolare una
-soluzione di concentrazione è incognita.
+soluzione di concentrazione incognita.
 In questo caso, è stata eseguita la titolazione di un acido debole (nel nostro caso \ce{CH3COOH}) mediante misure di pH, ovvero misurando la concentrazione di ioni \ce{H3O+}.
-Aggiungendo una soluzione basica di concentrazione nota è possibile, misurando l'andamento del pH in funzione del volume di soluzione basica aggiunta, ricavarne la concentrazione della soluzione incognita.
+Aggiungendo una soluzione basica di concentrazione nota è possibile, misurando l'andamento del pH in funzione del volume di soluzione basica aggiunta, ricavare la concentrazione della soluzione incognita.
