--- a/chimica/C4/latex/relazione.tex
+++ b/chimica/C4/latex/relazione.tex
@@ -13,7 +13,6 @@
 \usepackage[font=small]{caption}
 \usepackage[bookmarks, hidelinks]{hyperref}
 \usepackage{float}
-\usepackage{wrapfig}
 \usepackage{titlesec}
 \usepackage{subcaption}
 \usepackage[version=3]{mhchem}
@@ -27,7 +26,7 @@
 
 \begin{center}
 
-        {\huge Robe di elettrochimica? boh...}
+        {\huge Celle galvaniche ed elettrodi ionoselettivi}
     \vspace{0.1cm}
 
       	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo 8 Mercoledì} \\
