--- a/chimica/C4/latex/obiettivo.tex
+++ b/chimica/C4/latex/obiettivo.tex
@@ -1,5 +1,5 @@
 \section*{Scopo}
 
-Lo scopo scopo di questa esperienza è %titolare una soluzione di concentrazione incognita.
+Gli scopi di questa esperienza sono 2
 In questo caso, abbiamo proceduto ***ando così e cosà mediante misure di ***, ovvero misurando ***.
 Aggiungendo *** nota a *** è possibile, misurando *** in funzione di ***, ricavare *** di.
