--- a/chimica/C4/latex/materiale.tex
+++ b/chimica/C4/latex/materiale.tex
@@ -79,3 +79,12 @@ Per ogni coppia dopo aver immerso il ponte salino abbiamo misurato la f.e.m., ve
 uguale a quella prevista dai potenziali standard di semicella. Per concludere, abbiamo collegato due e poi anche tre
 celle in serie (con l'aiuto degli altri gruppi) e abbiamo provato a chiudere il circuito con un LED, verificando
 che il diodo emetteva un po' di luce. 
+\subsection*{Taratura degli elettrodi ionoselettivi (ISE)}
+Per poter tarare il nostro strumento abbiamo preparato delle soluzioni a concentrazione nota di \ce{Ca2+} attraverso 3 diluizioni successive in proporzioni 1:10 di una soluzione madre di concentrazione 1000mg/l. 
+Per prepararle abbiamo prelevato 10 ml di soluzione madre e l'abbiamo diluita nel matraccio da 100 ml.%Giusto?
+L'incertezza standard sul volume prelevato è di 0.03 ml, poichè abbiamo usato la pipetta con tacche ogni 0.1 ml.
+L'errore sul volume finale della prima diluizione è di 0.3 ml, avendo considerato un incertezza di risoluzione del matraccio
+di 1 ml. La deviazione sulle concentrazioni della soluzione madre è stata posta uguale a zero, non sapendo come è
+stata preparata.
+Operando analogamente, partendo da questa soluzione figlia abbiamo ottenuto le altre 2 soluzoni necessarie per la taratura. 
+Una volta ottenute le 4 soluzioni desiderate s'è impostata la temperatura d'esercizio, per permettere al lettore di fornirci misure dell'attività di \ce{Ca2+} corrette rispetto alle possibili variazioni dovute alla temperatura.
