--- a/chimica/C4/latex/obiettivo.tex
+++ b/chimica/C4/latex/obiettivo.tex
@@ -1,4 +1,4 @@
 \section*{Scopo}
 In questa esperienza abbiamo costruito diverse celle galvaniche.
 Abbiamo utilizzato vari materiali quali elettrodi e catodi ed abbiamo effettuato misure della forza elettro motrice utilizzando un volt-metro.
-Ulteriore scopo di questa esperienza è misurare la concentrazione di $Ca^2+$ in varie soluzioni tarando opportunamente lo strumento utilizzato.
+Ulteriore scopo di questa esperienza è misurare la concentrazione di \ce{Ca2+} in varie soluzioni tarando opportunamente lo strumento utilizzato.
