--- a/chimica/C4/latex/relazione.tex
+++ b/chimica/C4/latex/relazione.tex
@@ -29,7 +29,7 @@
         {\huge Celle galvaniche ed elettrodi ionoselettivi}
     \vspace{0.1cm}
 
-      	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo 8 Mercoledì} \\
+      	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo 8 Mercoledì Michele Salvagni} \\
       	{francescopasa@gmail.com - 28 maggio 2014}
     \vspace{-0.2cm}
 
