--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -1,2 +1,4 @@
 \section*{Dati e risultati}
-
+Immergendo \ce{Cu} nella soluzione di \ce{CuSO4} e collegandolo a \ce{Zn} immerso in \ce{ZnSO4}, abbiamo verificato che, una volta inserito il ponte salino, tra i due materiali si trovava una differenza di potenziale di 1.08V \pn ???. Osservando il segno riportato dal multimetro abbiamo verificato che l'elettrodo di \ce{Cu} era l'anodo(+), mentre quello \ce{Zn} era il catodo(-).
+Sostituendo allo zinco dell'argento \ce{Ag}, immerso in una soluzione di \ce{AgNO3} abbiamo misurato una differenza di potenziale di 0.43V in questo caso il rame fungeva da anodo, mentre l'elettrodo di zinco era l'anodo.
+Immergendo nelle rispettive soluzioni lo zinco e l'argento procedendo come precedentemente abbiamo misurato la più alta differenza di potenziale pari a 1.50V, \ce{Ag} anodo e \ce{Zn} catodo. Mettendo in serie rispettivamente 2 e 3  celle galvaniche di questo tipo, abbiamo ottenuto: 2.94V e 4.40V.
