--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -1,4 +1,34 @@
 \section*{Dati e risultati}
-Immergendo \ce{Cu} nella soluzione di \ce{CuSO4} e collegandolo a \ce{Zn} immerso in \ce{ZnSO4}, abbiamo verificato che, una volta inserito il ponte salino, tra i due materiali si trovava una differenza di potenziale di 1.08V \pn ???. Osservando il segno riportato dal multimetro abbiamo verificato che l'elettrodo di \ce{Cu} era l'anodo(+), mentre quello \ce{Zn} era il catodo(-).
-Sostituendo allo zinco dell'argento \ce{Ag}, immerso in una soluzione di \ce{AgNO3} abbiamo misurato una differenza di potenziale di 0.43V in questo caso il rame fungeva da anodo, mentre l'elettrodo di zinco era l'anodo.
-Immergendo nelle rispettive soluzioni lo zinco e l'argento procedendo come precedentemente abbiamo misurato la più alta differenza di potenziale pari a 1.50V, \ce{Ag} anodo e \ce{Zn} catodo. Mettendo in serie rispettivamente 2 e 3  celle galvaniche di questo tipo, abbiamo ottenuto: 2.94V e 4.40V.
+Immergendo \ce{Cu} nella soluzione di \ce{CuSO4} e collegandolo a \ce{Zn} immerso in \ce{ZnSO4}, abbiamo verificato che, una volta inserito il ponte salino, tra i due materiali si trovava una differenza di potenziale di $1.08V \pm 0.01$ \si{\volt}.
+%Osservando il segno riportato dal multimetro abbiamo verificato che l'elettrodo di \ce{Cu} era l'anodo(+), mentre quello \ce{Zn} era il catodo(-).
+Sostituendo allo zinco dell'argento \ce{Ag}, immerso in una soluzione di \ce{AgNO3} abbiamo misurato una differenza di potenziale di $0.43 \pm 0.01$ \si{\volt} in questo caso il rame fungeva da anodo, mentre l'elettrodo di zinco era l'anodo.
+Immergendo nelle rispettive soluzioni lo zinco e l'argento procedendo come precedentemente abbiamo misurato la più alta differenza di potenziale pari a $1.50 \pm 0.01$ \si{\volt}.%, \ce{Ag} anodo e \ce{Zn} catodo.
+Mettendo in serie rispettivamente 2 e 3 celle galvaniche di questo tipo, abbiamo ottenuto: 2.94 \si{\volt} e $4.40 \pm 0.01$\si{\volt}.
+%io sostituirei il paragrafo precedente con una bella tabellina%
+
+Abbiamo misurato diverse acque, del latte e un succo di frutta, confrontando, ove possibile i valori ottenuti con i dati riportati sull'etichetta. Nella seguente tabella sono esposti i risultati:
+
+\begin{table}
+\centering
+
+\begin{tabular}{c|c c c c c c}
+ & acqua & acqua & acqua & acqua & latte & succo \\
+ & Guizza & Panna & Ferrarelle & di Piné & diluito & di frutta \\
+  \noalign{\smallskip}\hline\noalign{\smallskip}
+[\ce{Ca2+}] (\si{\milli\gram\per\litre}) & 14.3 & 33.4 & 460 & 14.8 & 6.34 & 10.6 \\
+ddp (\si{\milli\volt}) & 15.1 & 25.2 & 56 & 15.5 & 5.6 & 11.6 \\
+  \noalign{\smallskip}\hline\noalign{\smallskip}
+[\ce{Ca2+}] etichetta & \multirow{2}{*}{10.6} & \multirow{2}{*}{32} & \multirow{2}{*}{392} & \multirow{2}{*}{} & \multirow{2}{*}{} & \multirow{2}{*}{} \\
+(\si{\milli\gram\per\litre}) &  &  &  &  &  &  \\
+\end{tabular}
+
+\end{table}
+
+
+
+
+
+
+
+
+
