--- a/chimica/C4/latex/relazione.tex
+++ b/chimica/C4/latex/relazione.tex
@@ -29,7 +29,8 @@
         {\huge Celle galvaniche ed elettrodi ionoselettivi}
     \vspace{0.1cm}
 
-      	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo 8 Mercoledì Michele Salvagni} \\
+      	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo 8 Mercoledì} \\
+      	{Michele Salvagni - Gruppo $\cdot$ Mercoledì} \\
       	{francescopasa@gmail.com - 28 maggio 2014}
     \vspace{-0.2cm}
 
@@ -37,6 +38,7 @@
 
 \input{obiettivo.tex}
 \input{materiale.tex}
+\input{procedura.tex}
 \input{dati_e_risultati.tex}
 \input{conclusione.tex}
 
