--- a/chimica/C4/latex/materiale.tex
+++ b/chimica/C4/latex/materiale.tex
@@ -25,10 +25,10 @@
         \item{Agitatore magnetico con ancorette (una per soluzione);}
         \item{Termometro;}
         \item{Acqua distillata;}
-        \item{Soluzione madre di concentrazione 1 g/l di ioni \ce{Ca^{2+}}, soluzione ISA (\emph{Ion Stranght
+        \item{Soluzione madre di concentrazione 1 g/l di ioni \ce{Ca^{2+}}, soluzione ISA (\emph{Ion Strength
             Adjuster});}
         \item{Campioni di misura: acqua minerali differenti, acque di acquedotti diversi, succhi di frutta, latte;}
-        \item{Francesco Pasa, Andrea Miani, Davide Bazzanella e tanta, tanta allegria.}
+        \item{Francesco Pasa, Andrea Miani, Davide Bazzanella, Michele Salvagni e tanta, tanta allegria.}
 \end{itemize}
 
 \section*{Procedura e incertezze}
@@ -79,12 +79,29 @@ Per ogni coppia dopo aver immerso il ponte salino abbiamo misurato la f.e.m., ve
 uguale a quella prevista dai potenziali standard di semicella. Per concludere, abbiamo collegato due e poi anche tre
 celle in serie (con l'aiuto degli altri gruppi) e abbiamo provato a chiudere il circuito con un LED, verificando
 che il diodo emetteva un po' di luce. 
-\subsection*{Taratura degli elettrodi ionoselettivi (ISE)}
-Per poter tarare il nostro strumento abbiamo preparato delle soluzioni a concentrazione nota di \ce{Ca2+} attraverso 3 diluizioni successive in proporzioni 1:10 di una soluzione madre di concentrazione 1000mg/l. 
-Per prepararle abbiamo prelevato 10 ml di soluzione madre e l'abbiamo diluita nel matraccio da 100 ml.%Giusto?
-L'incertezza standard sul volume prelevato è di 0.03 ml, poichè abbiamo usato la pipetta con tacche ogni 0.1 ml.
-L'errore sul volume finale della prima diluizione è di 0.3 ml, avendo considerato un incertezza di risoluzione del matraccio
-di 1 ml. La deviazione sulle concentrazioni della soluzione madre è stata posta uguale a zero, non sapendo come è
-stata preparata.
-Operando analogamente, partendo da questa soluzione figlia abbiamo ottenuto le altre 2 soluzoni necessarie per la taratura. 
-Una volta ottenute le 4 soluzioni desiderate s'è impostata la temperatura d'esercizio, per permettere al lettore di fornirci misure dell'attività di \ce{Ca2+} corrette rispetto alle possibili variazioni dovute alla temperatura.
+
+\subsection*{Taratura dell'elettrodo ionoselettivo (ISE)}
+
+Per poter tarare il nostro strumento abbiamo preparato tre soluzioni di concentrazione 1, 10 e 100 mg/l
+di \ce{Ca^{2+}} partendo da una soluzione madre di concentrazione 1000 mg/l. 
+Al fine di evitare troppe propagazioni gli errori, abbiamo preparato le due soluzioni 10 mg/l e 100 mg/l
+attraverso diluizioni diretta dalla soluzione madre e non attraverso diluizioni successive.
+Abbiamo prelevato rispettivamente 1 ml e 10 ml di soluzione madre e l'abbiamo diluita nel matraccio da 100 ml.
+L'incertezza standard sul volume prelevato è di 0.03 ml per la soluzione da 100 mg/l e di 0.006 per quella da 10 mg/l,
+poichè abbiamo usato pipette con tacche ogni 0.1 ml e 0.02 ml rispettivamente.
+L'errore sul volume finale della prima diluizione è di 0.3 ml,
+avendo considerato un incertezza di risoluzione del matraccio di 1 ml.
+La deviazione sulle concentrazioni della soluzione madre è stata posta uguale a zero, non sapendo come è
+stata preparata. Quindi i valori finali di concentrazione per queste due soluzioni di taratura sono
+$100 \pm 0.4$ mg/l e $10 \pm 0.07$ mg/l.
+
+Operando analogamente, partendo dalla soluzione figlia di concentrazione 100 mg/l abbiamo ottenuto l'altra soluzone
+necessaria per la taratura, prendendo 1 ml e diluendolo nel matraccio da 100 ml. Con incertezze uguali alle precedenti (unica differenza il fatto che la concentrazione di partenza ha una sua incertezza), si ottiene il seguente
+valore di concentrazione: 1 $\pm$ 0.009 mg/l.
+
+Una volta ottenute le 3 soluzioni desiderate s'è impostata la temperatura d'esercizio nelle impostazioni
+dello strumento, per permettere al lettore di fornirci misure dell'attività di \ce{Ca^{2+}}
+corrette rispetto alle possibili variazioni dovute alla temperatura. Abbiamo dunque eseguito le istruzioni a video
+per la taratura dello strumento.
+
+\subsection*{Misura della concentrazione di \ce{Ca^{2+}} di campioni incogniti}
