--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -1,4 +1,46 @@
 \section*{Dati e risultati}
-Immergendo \ce{Cu} nella soluzione di \ce{CuSO4} e collegandolo a \ce{Zn} immerso in \ce{ZnSO4}, abbiamo verificato che, una volta inserito il ponte salino, tra i due materiali si trovava una differenza di potenziale di 1.08V \pn ???. Osservando il segno riportato dal multimetro abbiamo verificato che l'elettrodo di \ce{Cu} era l'anodo(+), mentre quello \ce{Zn} era il catodo(-).
-Sostituendo allo zinco dell'argento \ce{Ag}, immerso in una soluzione di \ce{AgNO3} abbiamo misurato una differenza di potenziale di 0.43V in questo caso il rame fungeva da anodo, mentre l'elettrodo di zinco era l'anodo.
-Immergendo nelle rispettive soluzioni lo zinco e l'argento procedendo come precedentemente abbiamo misurato la più alta differenza di potenziale pari a 1.50V, \ce{Ag} anodo e \ce{Zn} catodo. Mettendo in serie rispettivamente 2 e 3  celle galvaniche di questo tipo, abbiamo ottenuto: 2.94V e 4.40V.
+
+\subsection*{Celle galvaniche}
+
+È possibile calcolare a priori la f.e.m. di una certa cella galvanica utilizzando i potenziali di Nerst.
+Ogni metallo ha una diversa tendenza ad ossidarsi e un corrispondente potenziale di Nerst $E^\circ$, che indica la
+forza elettromotrice che il metallo genererebbe se collegato ad un elettrodo di idrogeno (elemento scelto come
+standard) a 25$^\circ$C. Per ottenere la f.e.m. di una generica cella galvanica basta sottrarre i potenziali di
+Nerst dei metalli usati; inoltre quello con il potenzione più alto è l'anodo (+), mentre quello più basso
+il catodo (-). Riportiamo in Tabella \ref{tab:nerst} i potenziali dei metalli usati:
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{l c}
+    \toprule
+    Metallo & $E^\circ$ [V] \\
+    \midrule
+    \ce{Ag} & 0.8 \\
+    \ce{Cu} & 0.34 \\
+    \ce{Zn} & -0.76 \\
+    \bottomrule
+    \end{tabular}
+    \caption{Potenziali di Nerst per i metalli usati.}
+    \label{tab:nerst}
+\end{table}
+
+Immergendo l'elettrodo di \ce{Cu} nella soluzione di \ce{CuSO4} e collegandolo, mediante un voltmetro, all'elettrodo
+di \ce{Zn} immerso nella soluzione di \ce{ZnSO4}, abbiamo verificato che, una volta inserito il ponte salino, tra i due materiali si trovava una forza elettromotrice di 1.08 V $\pm$ 0.02 V (l'incertezza è stata assegnata notado di quanto variava il valore sul monitor del multimetro). Osservando il segno riportato dal multimetro abbiamo verificato che l'elettrodo di \ce{Cu} era l'anodo (+), mentre quello \ce{Zn} era il catodo (-).
+Sia il valore ottenuto che il segno degli elettrodi è in accordo con i potenziali di Nerst, che prevedono
+1.10 V per la coppia di materiali usati.
+
+Sostituendo allo zinco l'elettrodo di argento, immerso nella soluzione di \ce{AgNO3} abbiamo misurato
+una differenza di potenziale di 0.43 $\pm$ 0.01 V. In questo caso l'\ce{Ag} fungeva da anodo (+), mentre
+il rame era il catodo (-).
+
+Di nuovo, usando nelle rispettive soluzioni lo zinco e l'argento e procedendo in modo analogo,
+abbiamo misurato la più alta differenza di potenziale pari a 1.50 $\pm$ 0.01 V,
+con l'\ce{Ag} all'anodo (+) e lo \ce{Zn} come catodo (-).
+
+Mettendo in serie rispettivamente 2 e 3 celle galvaniche di questo tipo, con i gruppi vicini,
+abbiamo ottenuto: 2.94 $\pm$ 0.01 V e 4.40 $\pm$ 0.01 V. Con queste tensioni abbiamo provato ad alimentare un
+diodo LED, che siamo riusciti a far funzionare, anche se emetteva pochissima luce. Evidentemente
+le celle non sono in grado di fornire tensione o corrente a sufficienza. Il LED necessita di circa 100 mA
+che si ottengono applicando 10 V ai suoi capi.
+
+\subsection*{Misura della concentrazione di \ce{Ca^{2+}}}
