--- a/chimica/C4/latex/materiale.tex
+++ b/chimica/C4/latex/materiale.tex
@@ -19,14 +19,15 @@
 
 \begin{itemize}
         \setlength{\parskip}{0pt}
-        \item{Vetreria: 2 beker da 100 ml e 3 da 50ml, 2 pipette da 2 ml, 3 pipette da 10 ml, pipette Pasteur,
-            propipetta, cilindro da 100 ml;}
+        \item{Vetreria: 2 beker da 100 ml e 3 da 50ml, 2 pipette da 2 ml, 3 pipette da 10 ml,
+        		pipette Pasteur, propipetta, cilindro da 100 ml;}
         \item{Sonde elettrochimiche con relativo supporto, lettore di sonde Mettler-Toledo;}
         \item{Agitatore magnetico con ancorette (una per soluzione);}
         \item{Termometro;}
         \item{Acqua distillata;}
-        \item{Soluzione madre di concentrazione 1 g/l di ioni \ce{Ca^{2+}}, soluzione ISA (\emph{Ion Stranght
-            Adjuster});}
-        \item{Campioni di misura: acqua minerali differenti, acque di acquedotti diversi, succhi di frutta, latte;}
+        \item{Soluzione madre di concentrazione 1 g/l di ioni \ce{Ca^{2+}},
+				soluzione ISA (\emph{Ion Strength Adjuster});}
+        \item{Campioni di misura: acqua minerali differenti, acque di acquedotti diversi, succhi di
+        		frutta, latte;}
         \item{Francesco Pasa, Andrea Miani, Davide Bazzanella e tanta, tanta allegria.}
 \end{itemize}
