--- a/chimica/C4/latex/procedura.tex
+++ b/chimica/C4/latex/procedura.tex
@@ -2,25 +2,26 @@
 
 \subsection*{Misura del potenziale di alcune celle galvaniche}
 
-Nella prima parte dell'esperienza abbiamo costruito tre celle galvaniche (Cu-Zn, Ag-Cu, Ag-Zn) verificando le previsioni fatte con i potenziali standard di semicella.
-Inoltre abbiamo provato ad accendere un led con una o più celle galvaniche in serie.
-\\
+In questa parte dell'esperienza abbiamo costruito 3 celle galvaniche: Cu-Zn, Ag-Cu, Ag-Zn. Abbiamo verificato
+le previsioni fatte con i potenziali standard di semicella. Inoltre abbiamo provato a accendere un led con
+due celle galvaniche in serie.
 
-Poichè gli elettrodi erano già stati usati, la prima operazione è stata quella di pulirli con la carta vetrata, per liberarli dalle incrostazioni.
+Abbiamo cominciato col preparare il materiale occorrente. Poichè gli elettrodi erano già stati usati abbiamo
+provveuto a pulirli con la carta vetrata, per liberarli dalle incrostazioni.
 
-Successivamente sono state preparate le soluzioni necessarie per le celle, ovvero 50 ml di soluzione 0.1 M in acqua per ognuno dei seguenti tre composti: \ce{CuSO4}, \ce{ZnSO4} e \ce{AgNO3}.
-Per prepararle abbiamo prelevato 10 ml di soluzione madre 0.5 M di ciascun composto e le abbiamo diluite nel matraccio da 50 ml, ottenendo la concentrazione voluta.
+Successivamente sono state preparate le soluzioni necessarie per le celle, ovvero 50 ml di soluzione 0.1 M
+in acqua per ognuno dei seguenti 3 composti: \ce{CuSO4}, \ce{ZnSO4} e \ce{AgNO3}. Per prepararle abbiamo
+prelevato 10 ml di soluzione madre 0.5 M dei composti e le abbiamo diluite nel matraccio da 50 ml.
 L'incertezza standard sul volume prelevato è di 0.03 ml, poichè abbiamo usato la pipetta con tacche ogni 0.1 ml.
-L'errore sul volume finale è pertanto di 0.3 ml, avendo considerato un incertezza di risoluzione del matraccio di 1 ml.
-La deviazione sulle concentrazioni delle soluzioni madri è stata poste uguali a zero, non sapendo come sono
-state preparate.
-Con questi dati si ha che la concentrazione finale vale $100 \pm 0.7$ \si{\milli\mol\per\litre}.
+L'errore sul volume finale è di 0.3 ml, avendo considerato un incertezza di risoluzione del matraccio
+di 1 ml. La deviazione sulle concentrazioni delle soluzioni madri è state poste uguali a zero, non sapendo come sono
+state preparate. Con questi dati si ha che la concentrazione finale vale $100 \pm 0.7$ \si{\milli\mol\per\litre}.
 
-Le soluzioni sono state versate in beker da 100 ml distinti a due a due, creando tre possibili combinazioni.
-Abbiamo inserito in ogni soluzione l'elettrodo del materiale corrispondente (di rame nella soluzione di \ce{CuSO4}, di zinco in quella di \ce{ZnSO4} e di argento nella \ce{AgNO3}).
-Abbiamo collegato gli elettrodi al multimetro digitale per misurare la forza elettromotrice.
-Nella situazione così creata, però, il volt-metro mostrava una differenza di potenziale ai capi degli elettrodi nulla.
-Osserviamo per esempio le reazioni nel caso dei due elettrodi di rame e zinco:
+Le soluzioni sono state versate nei beker da 100 ml a due a due. Abbiamo inserito in ogni soluzione l'elettrodo
+del materiale corrispondente (di rame nella soluzione di \ce{CuSO4}, di zinco in quella di \ce{ZnSO4} e di
+argento nella \ce{AgNO3}). Abbiamo collegato gli elettrodi al multimetro digitale per misurare la f.e.m..
+Infine, per far procedere la reazione redox, che porta ad uno scambio di elettroni tra le due soluzioni,
+è necessario usare un ponte salino. Infatti la reazione che avviene è la seguente:
 
 \begin{equation}
     \begin{array}{l l}
@@ -29,27 +30,45 @@ Osserviamo per esempio le reazioni nel caso dei due elettrodi di rame e zinco:
     \end{array}
 \end{equation}
 
-Poichè le reazioni avvengono in beker separati, gli elettroni che perde lo zinco rimangono in uno dei due beker, mentre gli elettroni acquisiti dal rame aumentano la carica dell'altro beker.
-Ciò provoca uno scompenso di carica con una propria differenza di potenziale, la cui azione si oppone alla forza elettromotrice generata dalla reazione di ossidoriduzione. Le due azioni, raggiungendo l'equilibrio, si arrestano.
-Per per far procedere la reazione redox è necessario usare il ponte salino, nel nostro caso è costituito da una soluzione di \ce{KNO3} in agar (una gelatina) in un tubetto a contatto con entrambe le soluzioni.
-Il sale contenuto nel ponte salino si dissocia in \ce{K+} e \ce{NO3-} nel tubetto.
-Quando le soluzioni tendono a caricarsi, gli ioni del ponte migrano e si separano.
-Gli ioni \ce{K+} finiscono nella soluzione con il solfato di rame, mentre gli \ce{NO3-} in quella con lo zinco solfato.
-Questo ristabilisce l'equilibro di carica per entrambe le soluzioni nei beker e permette alla reazioni di ossidoriduzione di procedere.
+Poichè le reazioni avvengono in beker separati, i due elettroni che perde lo zinco devono passare
+attraverso gli elettrodi e il multimetro (o qualsiasi dispositivo io voglia alimentare)
+per giungere nell'altro beker e ridurre il rame
+(in realtà è un effetto a cascata, ma per semplicità si può considerare un passaggio). Questa reazione 
+tende però a caricare le due soluzioni attraverso lo spostamento di elettroni. La differenza di potenziale che
+si crea si oppone però alla reazione che giunge subito all'equilibrio e poi si arresta. Per evitare questo problema
+è necessario usare il ponte salino menzionato sopra, che non è altro che una soluzione di \ce{KNO3} in agar (una gelatina) in un tubetto a contatto con entrambe le soluzioni. Il sale si dissocia in \ce{K+} e \ce{NO3-} nel tubetto.
+Quando le soluzioni tendono a caricarsi, gli ioni del ponte migrano e si separano. Gli ioni \ce{K+} finiscono
+nella soluzione con il solfato di rame, mentre gli \ce{NO3-} in quella con lo zinco solfato. Questo ristabilisce l'equilibro e permette alla redox di procedere.
 
-L'esempio era riferito alla coppia rame-zinco, ma il ragionamento per le altre coppie è lo stesso.
+La reazione illustrata vale per la coppia rame-zinco, ma per le altre coppie la reazione è simile. 
 
-Per ogni coppia dopo aver immerso il ponte salino abbiamo misurato la forza elettromotrice, verificando che fosse uguale a quella prevista dai potenziali standard di semicella.
-\\
+Per ogni coppia dopo aver immerso il ponte salino abbiamo misurato la f.e.m., verificando che fosse
+uguale a quella prevista dai potenziali standard di semicella. Per concludere, abbiamo collegato due e poi anche tre
+celle in serie (con l'aiuto degli altri gruppi) e abbiamo provato a chiudere il circuito con un LED, verificando
+che il diodo emetteva un po' di luce. 
 
-Per concludere, abbiamo collegato (con l'aiuto di altri gruppi) due e poi anche tre celle in serieper alimentare un LED, verificando che il diodo emetteva luce.
+\subsection*{Taratura dell'elettrodo ionoselettivo (ISE)}
 
-\subsection*{Taratura degli elettrodi ionoselettivi (ISE)}
+Per poter tarare il nostro strumento abbiamo preparato tre soluzioni di concentrazione 1, 10 e 100 mg/l
+di \ce{Ca^{2+}} partendo da una soluzione madre di concentrazione 1000 mg/l. 
+Al fine di evitare troppe propagazioni gli errori, abbiamo preparato le due soluzioni 10 mg/l e 100 mg/l
+attraverso diluizioni diretta dalla soluzione madre e non attraverso diluizioni successive.
+Abbiamo prelevato rispettivamente 1 ml e 10 ml di soluzione madre e l'abbiamo diluita nel matraccio da 100 ml.
+L'incertezza standard sul volume prelevato è di 0.03 ml per la soluzione da 100 mg/l e di 0.006 per quella da 10 mg/l,
+poichè abbiamo usato pipette con tacche ogni 0.1 ml e 0.02 ml rispettivamente.
+L'errore sul volume finale della prima diluizione è di 0.3 ml,
+avendo considerato un incertezza di risoluzione del matraccio di 1 ml.
+La deviazione sulle concentrazioni della soluzione madre è stata posta uguale a zero, non sapendo come è
+stata preparata. Quindi i valori finali di concentrazione per queste due soluzioni di taratura sono
+$100 \pm 0.4$ mg/l e $10 \pm 0.07$ mg/l.
 
-Per poter tarare il nostro strumento abbiamo preparato delle soluzioni a concentrazione nota di \ce{Ca2+} attraverso 3 diluizioni successive in proporzioni 1:10 di una soluzione madre di concentrazione 1000mg/l. 
-Per prepararle abbiamo prelevato 10 ml di soluzione madre e l'abbiamo diluita nel matraccio da 100 ml.%Giusto?
-L'incertezza standard sul volume prelevato è di 0.03 ml, poichè abbiamo usato la pipetta con tacche ogni 0.1 ml.
-L'errore sul volume finale della prima diluizione è di 0.3 ml, avendo considerato un incertezza di risoluzione del matraccio di 1 ml.
-La deviazione sulle concentrazioni della soluzione madre è stata posta uguale a zero, non sapendo come è stata preparata.
-Operando analogamente, partendo da questa soluzione figlia abbiamo ottenuto le altre 2 soluzoni necessarie per la taratura. 
-Una volta ottenute le 4 soluzioni desiderate s'è impostata la temperatura d'esercizio, per permettere allo strumento di fornirci misure dell'attività di \ce{Ca2+} corrette rispetto alle possibili variazioni dovute alla temperatura.
+Operando analogamente, partendo dalla soluzione figlia di concentrazione 100 mg/l abbiamo ottenuto l'altra soluzone
+necessaria per la taratura, prendendo 1 ml e diluendolo nel matraccio da 100 ml. Con incertezze uguali alle precedenti (unica differenza il fatto che la concentrazione di partenza ha una sua incertezza), si ottiene il seguente
+valore di concentrazione: 1 $\pm$ 0.009 mg/l.
+
+Una volta ottenute le 3 soluzioni desiderate s'è impostata la temperatura d'esercizio nelle impostazioni
+dello strumento, per permettere al lettore di fornirci misure dell'attività di \ce{Ca^{2+}}
+corrette rispetto alle possibili variazioni dovute alla temperatura. Abbiamo dunque eseguito le istruzioni a video
+per la taratura dello strumento.
+
+\subsection*{Misura della concentrazione di \ce{Ca^{2+}} di campioni incogniti}
