--- a/chimica/C4/latex/procedura.tex
+++ b/chimica/C4/latex/procedura.tex
@@ -72,3 +72,17 @@ corrette rispetto alle possibili variazioni dovute alla temperatura. Abbiamo dun
 per la taratura dello strumento.
 
 \subsection*{Misura della concentrazione di \ce{Ca^{2+}} di campioni incogniti}
+
+Dopo aver tarato l'elettrodo, abbiamo misurato la concentrazione di \ce{Ca^{2+}} di vari campioni di acqua,
+sia in bottiglia (Panna, Guizza e Ferrarelle) che di acquedotto (Piné), succo di frutta e latte.
+
+Per la misura degli ioni calcio nelle varie acque, abbiamo semplicemente versato l'acqua nel becker
+e aggiunto 2\% in volume di soluzione ISA, che serve per portare la forza ionica della soluzione
+a livelli alti. In questo modo la quantità di calcio in soluzione non varia di molto la forza ionica,
+e quindi la misura è più precisa poichè gli elettrodi misurano l'attività e non la concentrazione.
+
+Poi abbiamo inserito gli elettrodi nell'acqua, mescolato per un minuto circa, spento l'agitatore magnetico,
+atteso un po' che la soluzione entrasse in equilibrio e poi preso la misura. In modo analogo abbiamo
+misurato il calcio presente nel latte e nel succo. Il latte è stato prima diluito di un fattore 100,
+mentre il succo è stato diluito di un fattore 4, entrambi con procedimenti analoghi a quelli spiegati nel paragrafo
+precedente e col matraccio da 100 ml.
