si ma tu c'hai un mucchio di probabilità, cioè tante, alte

--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -50,15 +50,17 @@ Abbiamo misurato diverse acque, del latte e un succo di frutta, confrontando, ov
 \begin{table}
 \centering
 
-\begin{tabular}{c|c c c c c c}
- & acqua & acqua & acqua & acqua & latte & succo \\
- & Guizza & Panna & Ferrarelle & di Piné & diluito & di frutta \\
-  \noalign{\smallskip}\hline\noalign{\smallskip}
-[\ce{Ca2+}] (\si{\milli\gram\per\litre}) & 14.3 & 33.4 & 460 & 14.8 & 6.34 & 10.6 \\
+\begin{tabular}{r @{\quad} c c c c c c}
+\toprule
+ & \multicolumn{4}{c}{acqua} & latte di vacca & succo di frutta \\
+ & Guizza & Panna & Ferrarelle & di Piné & diluito & diluito \\
+ \midrule
+\phantom{.}[\ce{Ca2+}] (mg/l) & 14.3 & 33.4 & 460 & 14.8 & 6.34 & 10.6 \\
 ddp (\si{\milli\volt}) & 15.1 & 25.2 & 56 & 15.5 & 5.6 & 11.6 \\
-  \noalign{\smallskip}\hline\noalign{\smallskip}
-[\ce{Ca2+}] etichetta & \multirow{2}{*}{10.6} & \multirow{2}{*}{32} & \multirow{2}{*}{392} & \multirow{2}{*}{} & \multirow{2}{*}{} & \multirow{2}{*}{} \\
-(\si{\milli\gram\per\litre}) &  &  &  &  &  &  \\
+ \midrule
+\phantom{.}[\ce{Ca2+}] etichetta & \multirow{2}{*}{10.6} & \multirow{2}{*}{32} & \multirow{2}{*}{392} & \multirow{2}{*}{} & \multirow{2}{*}{} & \multirow{2}{*}{} \\
+(mg/l) &  &  &  &  &  &  \\
+\bottomrule
 \end{tabular}
 
 \end{table}
