--- a/chimica/C4/latex/dati_e_risultati.tex
+++ b/chimica/C4/latex/dati_e_risultati.tex
@@ -62,3 +62,7 @@ ddp (\si{\milli\volt}) & 15.1 & 25.2 & 56 & 15.5 & 5.6 & 11.6 \\
 \end{tabular}
 
 \end{table}
+
+Abbiamo misurato erroneamente, le concentrazioni di \ce{Ca2+} in soluzioni prive di ISA ottenendo risultati molto distanti da quelli nominali. Successivamente, una volta scoperto l'errore commesso, abbiamo preso delle nuove misure, le quali risultano molto vicine al valore nominale in nostro possesso.
+Per l'acqua Guizza la quale riporta in etichetta una concentrazione di \ce{Ca2+} uguale a $10.6 \text{mg/l}$ mentre senza ISE otteniamo un valore di $26.8 \text{mg/l}$ con l'ISE si ottiene $14.3 \text{mg/l}$.
+Analogamente con il latte, il quale è stato diluito 100 volte, abbiamo misurato senza ISA $6.34 \text{mg/l}$ mentre con si ha 10.5 mg/l. Il valore nominale, non reperibile sull'etichetta è stato ricercato nel web. Abbiamo trovato che un valore tipico è $1200 \text{mg/l}$ la quale, appunto, è molto vicina a quella misurata.
